--- a/languagetool-language-modules/de/src/main/resources/org/languagetool/MessagesBundle_de.properties
+++ b/languagetool-language-modules/de/src/main/resources/org/languagetool/MessagesBundle_de.properties
@@ -151,15 +151,15 @@ guiUseServerWarning2 = Kein /v2 oder / am Ende der URL hinzuf\u00fcgen
 guiUsePremiumAccount = Premium-Konto verwenden (f\u00fcr Premium-Nutzer)
 guiPremiumUsername = Nutzername:
 guiPremiumApiKey = API-Schl\u00fcssel:
-guiAiSupportSettings = AI Support Settings
-guiUseAiSupport = Use AI Support
-guiAiUrl = AI Server URL
-guiAiModel = AI Model
-guiAiApiKey = AI API Key
-guiAiAutoCorrect = Enable automatic Error detection
-guiAiShowStylisticChanges = Show also suggestions for stylistic changes
-guiAiExperimentalHint = NOTE: This feature is still very experimental.
-guiAiQualityHint = The speed and quality of the results depends on the installation and model used.
+guiAiSupportSettings = KI-Unterst\u00fctzungseinstellungen
+guiUseAiSupport = KI-Unterst\u00fctzung verwenden
+guiAiUrl = KI-Server-URL
+guiAiModel = KI-Modell
+guiAiApiKey = KI-API-Schl\u00fcssel
+guiAiAutoCorrect = Automatische Fehlererkennung aktivieren
+guiAiShowStylisticChanges = Auch Vorschl\u00e4ge f\u00fcr stilistische \u00c4nderungen anzeigen
+guiAiExperimentalHint = HINWEIS: Diese Funktion ist noch sehr experimentell.
+guiAiQualityHint = Die Geschwindigkeit und Qualit\u00e4t der Ergebnisse h\u00e4ngt von der Installation und dem verwendeten Modell ab.
 guiStyleRepeatedWordText = Maximaler Abstand zwischen zwei wiederholten\nW\u00f6rtern (0 - 5 S\u00e4tze):
 guiLongSentencesText = Maximale Satzl\u00e4nge (5 - 100 W\u00f6rter):
 guiLongParagraphsText = Maximale Absatzl\u00e4nge (5 - {0} W\u00f6rter):
@@ -318,4 +318,4 @@ too_many_errors = (Vorschlagslimit erreicht)
 loRemoteInfoDefaultServer = Diese Erweiterung wird Ihren Text pr\u00fcfen, indem sie ihn \u00fcber eine verschl\u00fcsselte Verbindung an languagetool.org \u00fcbertr\u00e4gt. Ihr Text wird dabei nicht gespeichert.
 loRemoteInfoOtherServer = Diese Erweiterung wird Ihren Text pr\u00fcfen, indem sie ihn an {0} \u00fcbertr\u00e4gt. Fragen Sie den Betreiber dieses Servers zu den Datenschutzrichtlinien.
 loMenuRemoteInfo = Hinweis zu externer Pr\u00fcfung
-crh = Crimean Tatar
+crh = Krimtatar
