--- a/languagetool-core/src/main/resources/org/languagetool/MessagesBundle_en.properties
+++ b/languagetool-core/src/main/resources/org/languagetool/MessagesBundle_en.properties
@@ -189,7 +189,7 @@ no_space_before_colon = Don't put a space before the colon.
 no_space_before_semicolon = Don't put a space before the semicolon.
 no_space_before_percentage = Don't put a space before the percentage.
 pl = Polish
-repetition = Possible typo: you repeated a word
+repetition = Possible typo: you repeated a word.
 result1 = <br><b> {0}. Line {1}, column {2}</b><br>
 resultAreaText = Results will appear here
 resultTime = <br>Time: {0}ms<br>
