--- a/languagetool-core/src/main/resources/org/languagetool/MessagesBundle_en.properties
+++ b/languagetool-core/src/main/resources/org/languagetool/MessagesBundle_en.properties
@@ -161,6 +161,7 @@ guiAiShowStylisticChanges = Show also suggestions for stylistic changes
 guiAiExperimentalHint = NOTE: This feature is still very experimental.
 guiAiQualityHint = The speed and quality of the results depends on the installation and model used.
 guiStyleRepeatedWordText = Maximum distance between two repeated words (0 - 5 sentences):
+guiStyleExcludeDirectSpeechText = Exclude direct speech and quotations
 guiLongSentencesText = Maximum sentences length (5 - 100 words):
 guiLongParagraphsText = Maximum paragraphs length (5 - {0} words):
 guiMarkSingleCharBold = underline a single character error by a bold wave
