update from webtranslateit

--- a/languagetool-language-modules/ast/src/main/resources/org/languagetool/MessagesBundle_ast.properties
+++ b/languagetool-language-modules/ast/src/main/resources/org/languagetool/MessagesBundle_ast.properties
@@ -161,6 +161,7 @@ guiAiShowStylisticChanges = Show also suggestions for stylistic changes
 guiAiExperimentalHint = NOTE: This feature is still very experimental.
 guiAiQualityHint = The speed and quality of the results depends on the installation and model used.
 guiStyleRepeatedWordText = Distancia m\u00e1xima ente dos palabres repet\u00edes (0 - 5 frases):
+guiStyleExcludeDirectSpeechText = Exclude direct speech and quotations
 guiLongSentencesText = Llargor m\u00e1ximu de les frases (5 - 100 pallabres):
 guiLongParagraphsText = Llargor m\u00e1ximu de los p\u00e1rrafos (5 - 200 pallabres):
 guiMarkSingleCharBold = underline a single character error by a bold wave
