--- a/languagetool-language-modules/br/src/main/resources/org/languagetool/MessagesBundle_br.properties
+++ b/languagetool-language-modules/br/src/main/resources/org/languagetool/MessagesBundle_br.properties
@@ -161,6 +161,7 @@ guiAiShowStylisticChanges = Show also suggestions for stylistic changes
 guiAiExperimentalHint = NOTE: This feature is still very experimental.
 guiAiQualityHint = The speed and quality of the results depends on the installation and model used.
 guiStyleRepeatedWordText = Pellder brasa\u00f1 etre daou c'her adlavaret (0 - 5 frazenn):
+guiStyleExcludeDirectSpeechText = Exclude direct speech and quotations
 guiLongSentencesText = Hirder brasa\u00f1 ar frazenno\u00f9 (5 - 100 ger):
 guiLongParagraphsText = Hirder brasa\u00f1 ar pennado\u00f9 (5 - 100 ger):
 guiMarkSingleCharBold = islinenna\u00f1 ur fazi arouez en e-unan gant ur wagenn druz
