--- a/languagetool-language-modules/ca/src/main/resources/org/languagetool/MessagesBundle_ca.properties
+++ b/languagetool-language-modules/ca/src/main/resources/org/languagetool/MessagesBundle_ca.properties
@@ -161,6 +161,7 @@ guiAiShowStylisticChanges = Show also suggestions for stylistic changes
 guiAiExperimentalHint = NOTE: This feature is still very experimental.
 guiAiQualityHint = The speed and quality of the results depends on the installation and model used.
 guiStyleRepeatedWordText = M\u00e0xima dist\u00e0ncia entre dues paraules repetides (0 - 5 frases):
+guiStyleExcludeDirectSpeechText = Exclude direct speech and quotations
 guiLongSentencesText = Mida m\u00e0xima de les frases (5 - 100 paraules):
 guiLongParagraphsText = Mida m\u00e0xima dels par\u00e0grafs (5 - {0} paraules):
 guiMarkSingleCharBold = subratlla els errors d'un \u00fanic car\u00e0cter amb una ona en negreta
