--- a/languagetool-language-modules/es/src/main/resources/org/languagetool/MessagesBundle_es.properties
+++ b/languagetool-language-modules/es/src/main/resources/org/languagetool/MessagesBundle_es.properties
@@ -161,6 +161,7 @@ guiAiShowStylisticChanges = Show also suggestions for stylistic changes
 guiAiExperimentalHint = NOTE: This feature is still very experimental.
 guiAiQualityHint = The speed and quality of the results depends on the installation and model used.
 guiStyleRepeatedWordText = Distancia m\u00e1xima entre dos palabras repetidas (0 - 5 frases):
+guiStyleExcludeDirectSpeechText = Exclude direct speech and quotations
 guiLongSentencesText = Longitud m\u00e1xima de las frases (5 - 100 palabras):
 guiLongParagraphsText = Longitud m\u00e1xima de los p\u00e1rrafos (5 - 200 palabras):
 guiMarkSingleCharBold = subrayar los errores de un solo car\u00e1cter con una onda en negrita
