--- a/languagetool-language-modules/fr/src/main/resources/org/languagetool/MessagesBundle_fr.properties
+++ b/languagetool-language-modules/fr/src/main/resources/org/languagetool/MessagesBundle_fr.properties
@@ -161,6 +161,7 @@ guiAiShowStylisticChanges = Afficher \u00e9galement les suggestions de modificat
 guiAiExperimentalHint = Remarque : cette fonctionnalit\u00e9 est actuellement utilis\u00e9e \u00e0 titre exp\u00e9rimental.
 guiAiQualityHint = La vitesse et la qualit\u00e9 des r\u00e9sultats affich\u00e9s d\u00e9pend de l\u2019installation et du mod\u00e8le utilis\u00e9.
 guiStyleRepeatedWordText = Distance maximale entre deux mots r\u00e9p\u00e9t\u00e9s (0 - 5 phrases) :
+guiStyleExcludeDirectSpeechText = Exclude direct speech and quotations
 guiLongSentencesText = Longueur maximum de phrase (5 - 100 mots) :
 guiLongParagraphsText = Longueur maximum de paragraphe (5 - {0} mots) :
 guiMarkSingleCharBold = souligner une faute concernant un seul caract\u00e8re avec une ligne ondul\u00e9e en gras
