--- a/languagetool-language-modules/gl/src/main/resources/org/languagetool/MessagesBundle_gl.properties
+++ b/languagetool-language-modules/gl/src/main/resources/org/languagetool/MessagesBundle_gl.properties
@@ -161,6 +161,7 @@ guiAiShowStylisticChanges = Show also suggestions for stylistic changes
 guiAiExperimentalHint = NOTE: This feature is still very experimental.
 guiAiQualityHint = The speed and quality of the results depends on the installation and model used.
 guiStyleRepeatedWordText = Distancia m\u00e1xima entre 2 palabras repetidas (0 - 5 oraci\u00f3ns):
+guiStyleExcludeDirectSpeechText = Exclude direct speech and quotations
 guiLongSentencesText = Tama\u00f1o m\u00e1ximo das oraci\u00f3ns (5-100 palabras):
 guiLongParagraphsText = Tama\u00f1o m\u00e1ximo dos par\u00e1grafos (5-200 palabras):
 guiMarkSingleCharBold = subli\u00f1ar os erros de un \u00fanico car\u00e1cter cunha onda grosa
