--- a/languagetool-language-modules/nl/src/main/resources/org/languagetool/MessagesBundle_nl.properties
+++ b/languagetool-language-modules/nl/src/main/resources/org/languagetool/MessagesBundle_nl.properties
@@ -161,6 +161,7 @@ guiAiShowStylisticChanges = Show also suggestions for stylistic changes
 guiAiExperimentalHint = NOTE: This feature is still very experimental.
 guiAiQualityHint = The speed and quality of the results depends on the installation and model used.
 guiStyleRepeatedWordText = Minimale afstand tussen twee herhaalde woorden (0 - 5 zinnen):
+guiStyleExcludeDirectSpeechText = Exclude direct speech and quotations
 guiLongSentencesText = Maximale zinslengte (5 - 100 woorden)
 guiLongParagraphsText = Maximale zinslengte (5 - 200 woorden)
 guiMarkSingleCharBold = onderstreep een enkel foutief karakter met dikke golfje
