--- a/languagetool-language-modules/pt/src/main/resources/org/languagetool/MessagesBundle_pt_PT.properties
+++ b/languagetool-language-modules/pt/src/main/resources/org/languagetool/MessagesBundle_pt_PT.properties
@@ -161,6 +161,7 @@ guiAiShowStylisticChanges = Show also suggestions for stylistic changes
 guiAiExperimentalHint = NOTE: This feature is still very experimental.
 guiAiQualityHint = The speed and quality of the results depends on the installation and model used.
 guiStyleRepeatedWordText = Dist\u00e2ncia m\u00e1xima entre palavras repetidas (0-5 frases)
+guiStyleExcludeDirectSpeechText = Exclude direct speech and quotations
 guiLongSentencesText = Comprimento m\u00e1ximo das frases (5-100 palavras):
 guiLongParagraphsText = Comprimento m\u00e1ximo dos par\u00e1grafos (5-200 palavras):
 guiMarkSingleCharBold = underline a single character error by a bold wave
