--- a/languagetool-language-modules/sl/src/main/resources/org/languagetool/MessagesBundle_sl.properties
+++ b/languagetool-language-modules/sl/src/main/resources/org/languagetool/MessagesBundle_sl.properties
@@ -161,6 +161,7 @@ guiAiShowStylisticChanges = Show also suggestions for stylistic changes
 guiAiExperimentalHint = NOTE: This feature is still very experimental.
 guiAiQualityHint = The speed and quality of the results depends on the installation and model used.
 guiStyleRepeatedWordText = Najve\u010dja oddaljenost med ponovljenima besedama (0 - 5 stavkov):
+guiStyleExcludeDirectSpeechText = Exclude direct speech and quotations
 guiLongSentencesText = Najve\u010dja dol\u017eina stavkov (5 - 100 besed):
 guiLongParagraphsText = Najve\u010dja dol\u017eina odstavkov (5 - 200 besed):
 guiMarkSingleCharBold = Pod\u010drtaj napako enega znaka s krepko vijugo
