--- a/languagetool-language-modules/sv/src/main/resources/org/languagetool/MessagesBundle_sv.properties
+++ b/languagetool-language-modules/sv/src/main/resources/org/languagetool/MessagesBundle_sv.properties
@@ -161,6 +161,7 @@ guiAiShowStylisticChanges = Show also suggestions for stylistic changes
 guiAiExperimentalHint = NOTE: This feature is still very experimental.
 guiAiQualityHint = The speed and quality of the results depends on the installation and model used.
 guiStyleRepeatedWordText = Maximalt avst\u00e5nd mellan tv\u00e5 upprepade ord  (0 - 5 meningar):
+guiStyleExcludeDirectSpeechText = Exclude direct speech and quotations
 guiLongSentencesText = Maximal l\u00e4ngd f\u00f6r meningar (5 - 100 ord):
 guiLongParagraphsText = Maximal l\u00e4ngd f\u00f6r stycken (5 - 200 ord):
 guiMarkSingleCharBold = understryk enskilda bokst\u00e4ver med en fet v\u00e5g
