--- a/languagetool-language-modules/be/src/main/resources/org/languagetool/MessagesBundle_be.properties
+++ b/languagetool-language-modules/be/src/main/resources/org/languagetool/MessagesBundle_be.properties
@@ -161,6 +161,7 @@ guiAiShowStylisticChanges = Show also suggestions for stylistic changes
 guiAiExperimentalHint = NOTE: This feature is still very experimental.
 guiAiQualityHint = The speed and quality of the results depends on the installation and model used.
 guiStyleRepeatedWordText = \u041c\u0430\u043a\u0441\u0456\u043c\u0430\u043b\u044c\u043d\u0430\u044f \u0430\u0434\u043b\u0435\u0433\u043b\u0430\u0441\u0446\u044c \u043f\u0430\u043c\u0456\u0436 \u0434\u0432\u0443\u043c\u0430 \u0441\u043b\u043e\u0432\u0430\u043c\u0456, \u044f\u043a\u0456\u044f \u043f\u0430\u045e\u0442\u0430\u0440\u0430\u044e\u0446\u0446\u0430 (0 - 5 \u0441\u043a\u0430\u0437\u0430\u045e):
+guiStyleExcludeDirectSpeechText = Exclude direct speech and quotations
 guiLongSentencesText = \u041c\u0430\u043a\u0441\u0456\u043c\u0430\u043b\u044c\u043d\u0430\u044f \u0434\u0430\u045e\u0436\u044b\u043d\u044f \u0441\u043a\u0430\u0437\u0430\u045e (5 - 100 \u0441\u043b\u043e\u045e):
 guiLongParagraphsText = \u041c\u0430\u043a\u0441\u0456\u043c\u0430\u043b\u044c\u043d\u0430\u044f \u0434\u0430\u045e\u0436\u044b\u043d\u044f \u0430\u0431\u0437\u0430\u0446\u0430\u045e (5 - 200 \u0441\u043b\u043e\u045e):
 guiMarkSingleCharBold = \u041f\u0430\u0434\u043a\u0440\u044d\u0441\u043b\u0456\u0432\u0430\u0446\u044c \u0430\u0434\u0437\u0456\u043d\u043e\u0447\u043d\u044b \u0441\u0456\u043c\u0432\u0430\u043b \u0442\u043e\u045e\u0441\u0442\u0430\u0439 \u0445\u0432\u0430\u043b\u044f\u0439
